--- a/publications/colored_pointcloud_registration/license.html
+++ b/publications/colored_pointcloud_registration/license.html
@@ -17,7 +17,7 @@
     <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
+    <link href="../../css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -46,8 +46,8 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="hidden">
-					<a href="index.html"></a>
+				<li>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
 					<a href="download.html">Download</a>
@@ -73,10 +73,9 @@
 	</div>
 </header>
 
-<div class="container">
-
 <div class="col-lg-8 col-lg-offset-2">
-	The entire dataset, including both RGB-D scans and reconstructed models, is in the <mark><a href="https://wiki.creativecommons.org/wiki/Public_domain" target="_blank">public domain</a></mark>. Any part of the dataset can be used for any purpose with proper attribution. If you use any of the data, please cite our paper below.
+	<br><br>
+	<p class="lead">The entire dataset, including both RGB-D scans and reconstructed models, is in the <mark><a href="https://wiki.creativecommons.org/wiki/Public_domain" target="_blank">public domain</a></mark>. Any part of the dataset can be used for any purpose with proper attribution. If you use any of the data, please cite our paper below.</p>
 <pre>
 @inproceedings{Park2017,
 	author    = {Jaesik Park and Qian-Yi Zhou and Vladlen Koltun},
@@ -85,8 +84,6 @@
 	year      = {2017},
 }
 </pre>
-
-</div>
 
 </div>
 
