--- a/publications/colored_pointcloud_registration/contact.html
+++ b/publications/colored_pointcloud_registration/contact.html
@@ -46,8 +46,8 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="hidden">
-					<a href="index.html"></a>
+				<li>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
 					<a href="download.html">Download</a>
