--- a/publications/colored_pointcloud_registration/index.html
+++ b/publications/colored_pointcloud_registration/index.html
@@ -52,6 +52,9 @@
 				<li>
 					<a href="download.html">Download</a>
 				</li>
+				<li>
+					<a href="gallery.html">Gallery</a>
+				</li>
 				<li >
 					<a href="license.html">License</a>
 				</li>
