--- a/publications/colored_pointcloud_registration/gallery.html
+++ b/publications/colored_pointcloud_registration/gallery.html
@@ -17,14 +17,14 @@
     <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../../css/mystyle_dataset.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
 		<!-- Plugin CSS -->
-		<link href="../../css/magnific-popup.css" rel="stylesheet">
+		<link href="https://syncle.github.io/css/magnific-popup.css" rel="stylesheet">
 
 		<!-- Theme CSS -->
 
@@ -272,11 +272,11 @@
 
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="../../js/scrollreveal.min.js"></script>
-<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="https://syncle.github.io/js/scrollreveal.min.js"></script>
+<script src="https://syncle.github.io/js/jquery.magnific-popup.min.js"></script>
 
 <!-- Theme JavaScript -->
-<script src="../../js/creative.min.js"></script>
+<script src="https://syncle.github.io/js/creative.min.js"></script>
 
 </body>
 
