dataset page update

--- a/publications/colored_pointcloud_registration/gallery.html
+++ b/publications/colored_pointcloud_registration/gallery.html
@@ -91,8 +91,8 @@
 		<div class="container-fluid">
 				<div class="row no-gutter popup-gallery">
 						<div class="col-lg-6">
-								<a href="image/apartment_ours_full.png" class="portfolio-box">
-										<img src="image/apartment_ours_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/apartment_ours_full.jpg" class="portfolio-box">
+										<img src="image/gallery/apartment_ours_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -106,8 +106,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/apartment_dataset_full.png" class="portfolio-box">
-										<img src="image/apartment_dataset_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/apartment_dataset_full.jpg" class="portfolio-box">
+										<img src="image/gallery/apartment_dataset_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -121,8 +121,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/bedroom_ours_full.png" class="portfolio-box">
-										<img src="image/bedroom_ours_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/bedroom_ours_full.jpg" class="portfolio-box">
+										<img src="image/gallery/bedroom_ours_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -136,8 +136,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/bedroom_dataset_full.png" class="portfolio-box">
-										<img src="image/bedroom_dataset_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/bedroom_dataset_full.jpg" class="portfolio-box">
+										<img src="image/gallery/bedroom_dataset_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -151,8 +151,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/boardroom_ours_full.png" class="portfolio-box">
-										<img src="image/boardroom_ours_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/boardroom_ours_full.jpg" class="portfolio-box">
+										<img src="image/gallery/boardroom_ours_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -166,8 +166,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/boardroom_dataset_full.png" class="portfolio-box">
-										<img src="image/boardroom_dataset_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/boardroom_dataset_full.jpg" class="portfolio-box">
+										<img src="image/gallery/boardroom_dataset_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -181,8 +181,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/lobby_ours_full.png" class="portfolio-box">
-										<img src="image/lobby_ours_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/lobby_ours_full.jpg" class="portfolio-box">
+										<img src="image/gallery/lobby_ours_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -196,8 +196,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/lobby_dataset_full.png" class="portfolio-box">
-										<img src="image/lobby_dataset_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/lobby_dataset_full.jpg" class="portfolio-box">
+										<img src="image/gallery/lobby_dataset_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -211,8 +211,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/loft_ours_full.png" class="portfolio-box">
-										<img src="image/loft_ours_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/loft_ours_full.jpg" class="portfolio-box">
+										<img src="image/gallery/loft_ours_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
@@ -226,8 +226,8 @@
 								</a>
 						</div>
 						<div class="col-lg-6">
-								<a href="image/loft_dataset_full.png" class="portfolio-box">
-										<img src="image/loft_dataset_thumbnail.jpg" class="img-responsive" alt="">
+								<a href="image/gallery/loft_dataset_full.jpg" class="portfolio-box">
+										<img src="image/gallery/loft_dataset_thumbnail.jpg" class="img-responsive" alt="">
 										<div class="portfolio-box-caption">
 												<div class="portfolio-box-caption-content">
 														<div class="project-category text-faded">
