--- a/publications/colored_pointcloud_registration/index.html
+++ b/publications/colored_pointcloud_registration/index.html
@@ -89,35 +89,35 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="image/gth_apt.png" alt="apartment">
+      <img src="image/index/gth_apt.jpg" alt="apartment">
 			<div class="carousel-caption">
         <h3>Apartment</h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="image/gth_bedroom.png" alt="bedroom">
+      <img src="image/index/gth_bedroom.jpg" alt="bedroom">
 			<div class="carousel-caption">
         <h3>Bedroom</h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="image/gth_boardroom.png" alt="boardroom">
+      <img src="image/index/gth_boardroom.jpg" alt="boardroom">
 			<div class="carousel-caption">
         <h3>Boardroom</h3>
       </div>
     </div>
 
 		<div class="item">
-			<img src="image/gth_lobby.png" alt="lobby">
+			<img src="image/index/gth_lobby.jpg" alt="lobby">
 			<div class="carousel-caption">
 				<h3>Lobby</h3>
 			</div>
 		</div>
 
 		<div class="item">
-			<img src="image/gth_loft.png" alt="loft">
+			<img src="image/index/gth_loft.jpg" alt="loft">
 			<div class="carousel-caption">
 				<h3>Loft</h3>
 			</div>
@@ -143,7 +143,7 @@
 		<div class="col-lg-3">
 			<h2>Paper</h2>
 			<a href="paper.pdf" target="_blank" class="btn btn-default" role="button">
-				<img src="paper.jpg" alt="Paper" width="110" height="140">
+				<img src="image/index/paper.jpg" alt="Paper" width="110" height="140">
 			</a>
 		</div>
 		<div class="col-lg-9">
