--- a/publications/colored_pointcloud_registration/download.html
+++ b/publications/colored_pointcloud_registration/download.html
@@ -206,7 +206,7 @@
 	</div>
 	<div class="col-lg-4">
 		<h3>RGB-D sequence</h3>
-		<p>Continuous RGB-D video sequences are captured using an Asus Xtion Live camera. The lengths of the sequences range from 11 to 18 minutes. Each sequence thoroughly covers the respective scene. The RGB-D sequences can be used as input to any scene reconstruction systems. </p>
+		<p>Continuous RGB-D video sequences are captured using an Asus Xtion Live camera. The lengths of the sequences range from 11 to 18 minutes. Each sequence thoroughly covers the respective scene. The RGB-D sequences can be used as input to any scene reconstruction system. </p>
 	</div>
 	<div class="col-lg-4">
 		<h3>Our reconstruction</h3>
