--- a/publications/colored_pointcloud_registration/index.html
+++ b/publications/colored_pointcloud_registration/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="https://syncle.github.io/source/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -136,6 +136,7 @@
 </div>
 
 <div class="col-lg-8 col-lg-offset-2">
+	<p>Images shown above are meshed Lidar scan renderings and 360 panorama images.</p>
 	<h2>Introduction</h2>
 		<p class="lead"> To our knowledge, no publicly available RGB-D dataset provides dense ground-truth surface geometry across largescale real-world scenes. To complement existing datasets, we have created ground-truth models of five complete indoor environments using a high-end laser scanner, and captured RGB-D video sequences of these scenes. This data
 		enables quantitative evaluation of real-world scene reconstruction.</p>
