--- a/publications/colored_pointcloud_registration/download.html
+++ b/publications/colored_pointcloud_registration/download.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="https://syncle.github.io/source/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,10 +14,10 @@
     <title>Indoor Lidar-RGBD Scan Dataset</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
+    <link href="css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -238,16 +238,16 @@
 </footer>
 
 <!-- jQuery -->
-<script src="https://syncle.github.io/js/jquery.js"></script>
+<script src="js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="https://syncle.github.io/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/jquery.easing.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/freelancer.js"></script>
+<script src="js/freelancer.js"></script>
 
 </body>
 
