--- a/publications/colored_pointcloud_registration/gallery.html
+++ b/publications/colored_pointcloud_registration/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="https://syncle.github.io/source/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,17 +14,17 @@
     <title>Indoor Lidar-RGBD Scan Dataset</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
+    <link href="css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
 		<!-- Plugin CSS -->
-		<link href="https://syncle.github.io/css/magnific-popup.css" rel="stylesheet">
+		<link href="css/magnific-popup.css" rel="stylesheet">
 
 		<!-- Theme CSS -->
 
@@ -259,24 +259,24 @@
 </footer>
 
 <!-- jQuery -->
-<script src="https://syncle.github.io/js/jquery.js"></script>
+<script src="js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="https://syncle.github.io/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/jquery.easing.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/freelancer.js"></script>
+<script src="js/freelancer.js"></script>
 
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="https://syncle.github.io/js/scrollreveal.min.js"></script>
-<script src="https://syncle.github.io/js/jquery.magnific-popup.min.js"></script>
+<script src="js/scrollreveal.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
 
 <!-- Theme JavaScript -->
-<script src="https://syncle.github.io/js/creative.min.js"></script>
+<script src="js/creative.min.js"></script>
 
 </body>
 
