--- a/publications/colored_pointcloud_registration/index.html
+++ b/publications/colored_pointcloud_registration/index.html
@@ -14,10 +14,10 @@
     <title>Indoor Lidar-RGBD Scan Dataset</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
+    <link href="css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -135,8 +135,10 @@
   </a>
 </div>
 
+<div class="col-lg-8 col-lg-offset-2 text-right">
+	<p>*Images shown above are meshed Lidar scan renderings (left) and 360 panorama images (right).</p>
+</div>
 <div class="col-lg-8 col-lg-offset-2">
-	<p>Images shown above are meshed Lidar scan renderings and 360 panorama images.</p>
 	<h2>Introduction</h2>
 		<p class="lead"> To our knowledge, no publicly available RGB-D dataset provides dense ground-truth surface geometry across largescale real-world scenes. To complement existing datasets, we have created ground-truth models of five complete indoor environments using a high-end laser scanner, and captured RGB-D video sequences of these scenes. This data
 		enables quantitative evaluation of real-world scene reconstruction.</p>
@@ -185,16 +187,16 @@
 </footer>
 
 <!-- jQuery -->
-<script src="https://syncle.github.io/js/jquery.js"></script>
+<script src="js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="https://syncle.github.io/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/jquery.easing.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/freelancer.js"></script>
+<script src="js/freelancer.js"></script>
 
 </body>
 
