--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,28 @@
 
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/17_iccv.jpg" style="max-height:170px" class="img-responsive center-block">
+	</div>
+	<div class="col-lg-7">
+		<h3>Colored Point Cloud Registration Revisited</h3>
+		<p>Jaesik Park, Qian-Yi Zhou, and Vladlen Koltun<br>
+		International Conference on Computer Vision (ICCV), 2017<br>
+		</p>
+		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="publications/17_iccv.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="publications/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
+		<p><br></p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/17_siggraph.png" style="max-height:170px" class="img-responsive center-block">
 	</div>
 	<div class="col-lg-7">
@@ -111,11 +133,11 @@
 		<p>Arno Knapitsch, Jaesik Park, Qian-Yi Zhou, and Vladlen Koltun<br>
 		ACM Transactions on Graphics (Proc. SIGGRAPH 2017)<br>
 		</p>
-		<a href="publications/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
 		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="publications/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 		<p><br></p>
 	</div>
@@ -170,11 +192,11 @@
 		<p>Qian-Yi Zhou, Jaesik Park, and Vladlen Koltun<br>
 		ECCV 2016<br>
 		(Oral Presentation, 1.8% acceptance rate)</p>
-		<a href="https://github.com/IntelVCL/FastGlobalRegistration" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-pencil"></span> Code
-		</a>
 		<a href="http://vladlen.info/publications/fast-global-registration/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="https://github.com/IntelVCL/FastGlobalRegistration" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 		<p><br></p>
 	</div>
@@ -237,17 +259,17 @@
 		<p>Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, Jaesik Park, Jun Ho Oh, and In So Kweon<br>
 		ICRA 2016<br>
 		Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)</p>
-		<a href="http://arxiv.org/pdf/1509.06114v2.pdf" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-		<a href="https://sites.google.com/site/kaistdrcdata/" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-download-alt"></span> Data
-		</a>
 		<a href="https://sites.google.com/site/iwshimcv/drc-finals-2015" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
+		<a href="http://arxiv.org/pdf/1509.06114v2.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 		<a href="https://drive.google.com/file/d/0B99EdZxWBWl_V1NYZVM3cFZQRGc/view?usp=sharing" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
+		<a href="https://sites.google.com/site/kaistdrcdata/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-download-alt"></span> Data
 		</a>
 		<p><br></p>
 	</div>
