--- a/publications.html
+++ b/publications.html
@@ -111,7 +111,7 @@
 		<p>Jaesik Park, Qian-Yi Zhou, and Vladlen Koltun<br>
 		International Conference on Computer Vision (ICCV), 2017<br>
 		</p>
-		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
+		<a href="#" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<a href="publications/17_iccv.pdf" target="_blank" class="btn btn-default" role="button">
