removing syncle.github.io

--- a/source/footer.html
+++ b/source/footer.html
@@ -12,16 +12,16 @@
 </footer>
 
 <!-- jQuery -->
-<script src="https://syncle.github.io/js/jquery.js"></script>
+<script src="http://jaesik.info/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="https://syncle.github.io/js/bootstrap.min.js"></script>
+<script src="http://jaesik.info/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/jquery.easing.min.js"></script>
+<script src="http://jaesik.info/js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="https://syncle.github.io/js/freelancer.js"></script>
+<script src="http://jaesik.info/js/freelancer.js"></script>
 
 </body>
 
