about me mentor link

--- a/source/content_about_me.html
+++ b/source/content_about_me.html
@@ -15,14 +15,14 @@
 			</li>
 			<li class="list-group-item">
 				<h4>Research Intern - Microsoft Research</h4>
-				Mentor: Sudipta N. Sinha<br>
+				Mentor: <a href="https://www.microsoft.com/en-us/research/people/sudipsin/" target="_blank">Dr. Sudipta N. Sinha</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Redmond, Washington, USA<br>
 				<span class="glyphicon glyphicon-calendar"></span>
 				June 2013 – Sep. 2013
 			</li>
 			<li class="list-group-item">
 				<h4>Research Intern - Microsoft Research Asia</h4>
-				Mentor: Yasuyuki Matsushita <br>
+				Mentor: <a href="http://www-infobiz.ist.osaka-u.ac.jp/user/matsushita/" target="_blank">Prof. Yasuyuki Matsushita</a> <br>
 				<span class="glyphicon glyphicon-map-marker"></span> Beijing, China <br>
 				<span class="glyphicon glyphicon-calendar"></span>
 				April 2012 – Oct. 2012
@@ -34,13 +34,13 @@
 			<ul class="list-group">
 			<li class="list-group-item">
 				<h4>Ph.D. in Electrical Engineering - KAIST</h4>
-				Advisor: Prof. In So Kweon, Co-Advisor: Dr. Yu-Wing Tai<br>
+				Advisor: <a href="http://rcv.kaist.ac.kr/v2/bbs/member_detail.php?mb_id=%20iskweon" target="_blank">Prof. In So Kweon</a>, Co-Advisor: <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en" target="_blank">Dr. Yu-Wing Tai</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
 				<span class="glyphicon glyphicon-calendar"></span> Feb. 2011 – Aug. 2015
 			</li>
 			<li class="list-group-item">
 				<h4>M.S. in Electrical Engineering - KAIST</h4>
-				Advisor: Prof. In So Kweon<br>
+				Advisor: <a href="http://rcv.kaist.ac.kr/v2/bbs/member_detail.php?mb_id=%20iskweon" target="_blank">Prof. In So Kweon</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
 				<span class="glyphicon glyphicon-calendar"></span> Feb. 2009 – Feb. 2011
 			</li>
