--- a/source/content_academic_activities.html
+++ b/source/content_academic_activities.html
@@ -11,7 +11,7 @@
 					International Conference on Computer Vision (ICCV), 2015, 2017<br>
 					The European Conference on Computer Vision (ECCV), 2012, 2016<br>
 					British Machine Vision Conference (BMVC), 2017<br>
-					International Conference on 3D Vision (3DV), 2015, 2016<br>
+					International Conference on 3D Vision (3DV), 2015 - 2017<br>
 					Asian Conference on Computer Vision (ACCV), 2016<br>
 					IEEE Winter Conference on Applications of Computer Vision (WACV), 2014<br>
 					IEEE International Conference on Image Processing (ICIP), 2014<br>
