--- a/publications/multiviewps/index.html
+++ b/publications/multiviewps/index.html
@@ -113,11 +113,17 @@
 		<a href="ICCV2013.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
+		<a href="ICCV2013poster.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-blackboard"></span> Poster
+		</a>
 		<a href="ICCV2013bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<a href="ICCV2013poster.pdf" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-blackboard"></span> Poster
+		<a href="https://www.dropbox.com/s/pdhiexb4jur5tqf/MeshOpt_Executable.zip?dl=1" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-floppy-disk"></span> Executable
+		</a>
+		<a href="dataset.txt" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-download-alt"></span> Data
 		</a>
 		<p><br></p>
 </div>
