--- a/source/content_index.html
+++ b/source/content_index.html
@@ -12,6 +12,9 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
 					<li class="list-group-item">
+						2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
+					</li>
+					<li class="list-group-item">
 						2017.08. Launching new homepage for better visualization on workstation and mobile.
 					</li>
 					<li class="list-group-item">
@@ -22,12 +25,6 @@
 					</li>
 					<li class="list-group-item">
 						2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
-					</li>
-					<li class="list-group-item">
-						2016.08. A paper about high-quality 3D reconstruction is accepted to TPAMI.
-					</li>
-					<li class="list-group-item">
-						2016.07. A paper about global point-cloud registration is accepted to ECCV 2016 as an oral presentation.
 					</li>
 					</ul>
 			</div>
