--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,27 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12 text-left">
+			<h2 class="name">2018</h2>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/18_pami.png" style="max-height:170px" class="img-responsive center-block">
+	</div>
+	<div class="col-lg-7">
+		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
+		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
+		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), accepted<br>
+		</p>
+		<p><br></p>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12 text-left">
 			<h2 class="name">2017</h2>
 		</div>
 	</div>
@@ -109,7 +130,7 @@
 	<div class="col-lg-7">
 		<h3>Colored Point Cloud Registration Revisited</h3>
 		<p>Jaesik Park, Qian-Yi Zhou, and Vladlen Koltun<br>
-		International Conference on Computer Vision (ICCV), 2017<br>
+		International Conference on Computer Vision (<b>ICCV</b>), 2017<br>
 		</p>
 		<a href="http://redwood-data.org/indoor_lidar_rgbd/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -131,7 +152,7 @@
 	<div class="col-lg-7">
 		<h3>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h3>
 		<p>Arno Knapitsch, Jaesik Park, Qian-Yi Zhou, and Vladlen Koltun<br>
-		ACM Transactions on Graphics (Proc. SIGGRAPH 2017)<br>
+		ACM Transactions on Graphics (Proc. <b>SIGGRAPH</b>) 2017<br>
 		</p>
 		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -150,7 +171,7 @@
 	<div class="col-lg-7">
 		<h3>Category‐Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
 		<p>Seong‐heum Kim, Yu‐Wing Tai, Joon‐Young Lee, Jaesik Park, and In So Kweon<br>
-		Computer Graphics Forum 2017<br>
+		Computer Graphics Forum (<b>CGF</b>) 2017<br>
 		</p>
 		<a href="http://rcv.kaist.ac.kr/v2/bbs/board.php?bo_table=rs_publications&wr_id=547" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -174,7 +195,7 @@
 	<div class="col-lg-7">
 		<h3>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
-		TPAMI 2016<br>
+		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>) 2016<br>
 		</p>
 		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -190,8 +211,8 @@
 	<div class="col-lg-7">
 		<h3>Fast Global Registration</h3>
 		<p>Qian-Yi Zhou, Jaesik Park, and Vladlen Koltun<br>
-		ECCV 2016<br>
-		(Oral Presentation, 1.8% acceptance rate)</p>
+		European Conference on Computer Vision (<b>ECCV</b>) 2016<br>
+		(<b>Oral</b> Presentation, 1.8% acceptance rate)</p>
 		<a href="http://vladlen.info/publications/fast-global-registration/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
@@ -209,7 +230,7 @@
 	<div class="col-lg-7">
 		<h3>Refining Geometry from Depth Sensors using IR Shading Images</h3>
 		<p>Gyeongmin Choe, Jaesik Park, Yu-Wing Tai, and In So Kweon<br>
-		IJCV 2016<br>
+		International Journal of Computer Vision (<b>IJCV</b>) 2016<br>
 		</p>
 		<a href="http://rcv.kaist.ac.kr/gmchoe/Project/Kinect_IR_IJCV/Published.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -225,7 +246,7 @@
 	<div class="col-lg-7">
 		<h3>Efficient and Robust Color Consistency for Community Photo Collections</h3>
 		<p>Jaesik Park, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
-		CVPR 2016<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2016<br>
 		</p>
 		<a href="publications/photoconsistency/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -241,8 +262,8 @@
 	<div class="col-lg-7">
 		<h3>High-quality Depth from Uncalibrated Small Motion Clip</h3>
 		<p>Hyowon Ha, Sunghoon Im, Jaesik Park, Hae-Gon Jeon, and In So Kweon<br>
-		CVPR 2016<br>
-		(Oral Presentation, 3.9% acceptance rate)</p>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2016<br>
+		(<b>Oral</b> Presentation, 3.9% acceptance rate)</p>
 		<a href="https://sites.google.com/site/hyowoncv/ha_cvpr16" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
@@ -257,7 +278,7 @@
 	<div class="col-lg-7">
 		<h3>Vision System and Depth Processing for DRC-HUBO+</h3>
 		<p>Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, Jaesik Park, Jun Ho Oh, and In So Kweon<br>
-		ICRA 2016<br>
+		IEEE International Conference on Robotics and Automation (<b>ICRA</b>) 2016<br>
 		Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)</p>
 		<a href="https://sites.google.com/site/iwshimcv/drc-finals-2015" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -282,7 +303,7 @@
 	<div class="col-lg-7">
 		<h3>Multi-view Object Extraction with Fractional Boundaries,</h3>
 		<p>Seong-Heum Kim, Yu-Wing Tai, Jaesik Park, and In So Kweon<br>
-		TIP 2016<br>
+		IEEE Transaction on Image Processing (<b>TIP</b>) 2016<br>
 		</p>
 		<a href="publications/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -309,7 +330,7 @@
 	<div class="col-lg-7">
 		<h3>Dense Depth and Albedo from a Single-shot Structured Light,</h3>
 		<p>Hyowon Ha, Jaesik Park, and In So Kweon<br>
-		3DV 2015<br>
+		International Conference on 3D Vision (<b>3DV</b>) 2015<br>
 		</p>
 		<a href="publications/15_3dv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -328,7 +349,7 @@
 	<div class="col-lg-7">
 		<h3>Accurate Depth Map Estimation from a Lenslet Light Field Camera</h3>
 		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
-		CVPR 2015<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2015<br>
 		</p>
 		<a href="https://sites.google.com/site/hgjeoncv/home/depthfromlf_cvpr15" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -344,7 +365,7 @@
 	<div class="col-lg-7">
 		<h3>Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines</h3>
 		<p>SoonMin Hwang, Jaesik Park, Namil Kim, Yukyung Choi, and In So Kweon<br>
-		CVPR 2015<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2015<br>
 		</p>
 		<a href="https://sites.google.com/site/pedestrianbenchmark/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -368,7 +389,7 @@
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h3>
 		<p>Jaesik Park, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
-		TIP 2014<br>
+		IEEE Transaction on Image Processing (<b>TIP</b>) 2014<br>
 		</p>
 		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -384,7 +405,7 @@
 	<div class="col-lg-7">
 		<h3>Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h3>
 		<p>Byungtae Ahn, Jaesik Park, and In So Kweon<br>
-		ACCV 2014<br>
+		Asian Conference on Computer Vision (<b>ACCV</b>) 2014<br>
 		</p>
 		<a href="publications/14_accv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -403,7 +424,7 @@
 	<div class="col-lg-7">
 		<h3>GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h3>
 		<p>Jinsoo Choi, Byungtae Ahn, Jaesik Park, In So Kweon<br>
-		ICIP 2014<br>
+		International Conference on Image Processing (<b>ICIP</b>) 2014<br>
 		</p>
 		<a href="publications/14_icip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -422,7 +443,7 @@
 	<div class="col-lg-7">
 		<h3>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h3>
 		<p>Gyeongmin Choe*, Jaesik Park*, Yu-Wing Tai and In So Kweon<br>
-		CVPR 2014<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2014<br>
 		*Equal contributions. Received 20th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
 		<a href="http://rcv.kaist.ac.kr/gmchoe/project/Kinect_IR/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -438,7 +459,7 @@
 	<div class="col-lg-7">
 		<h3>Calibrating a Non-isotropic Near Point Light Source using a Plane</h3>
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
-		CVPR 2014<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2014<br>
 		</p>
 		<a href="publications/lightcalib/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -462,7 +483,7 @@
 	<div class="col-lg-7">
 		<h3>Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
-		ICCV 2013<br>
+		International Conference on Computer Vision (<b>ICCV</b>) 2013<br>
 		Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
 		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -486,7 +507,7 @@
 	<div class="col-lg-7">
 		<h3>Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h3>
 		<p>Jaesik Park, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai and In So Kweon<br>
-		ECCV 2012<br>
+		European Conference on Computer Vision (<b>ECCV</b>) 2012<br>
 		</p>
 		<a href="publications/12_eccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -508,7 +529,7 @@
 	<div class="col-lg-7">
 		<h3>Modeling Photo Composition and Its Application to Photo Re-arrangement</h3>
 		<p>Jaesik Park, Joon-Young Lee, Yu-Wing Tai and In So Kweon<br>
-		ICIP 2012<br>
+		International Conference on Image Processing (<b>ICIP</b>) 2012<br>
 		</p>
 		<a href="publications/12_icip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -530,7 +551,7 @@
 	<div class="col-lg-7">
 		<h3>Identigram/Watermark removal using cross-channel correlation</h3>
 		<p>Jaesik Park, Yu-Wing Tai and In-So Kweon<br>
-		CVPR 2012<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2012<br>
 		</p>
 		<a href="publications/identigram/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
@@ -554,7 +575,7 @@
 	<div class="col-lg-7">
 		<h3>A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h3>
 		<p>Jiyoung Jung, Yekeun Jeong, Jaesik Park, Hyowon Ha, J. D. Kim and In-So Kweon<br>
-		IROS 2011<br>
+		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>) 2011<br>
 		</p>
 		<a href="publications/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
@@ -570,7 +591,7 @@
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
 		<p>Jaesik Park*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
-		ICCV 2011<br>
+		International Conference on Computer Vision (<b>ICCV</b>) 2011<br>
 		*Equal contributions.</p>
 		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
