--- a/publications/photoconsistency/index.html
+++ b/publications/photoconsistency/index.html
@@ -109,7 +109,7 @@
 		<a href="bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<a href="code.zip" target="_blank" class="btn btn-default" role="button">
+		<a href="https://github.com/syncle/photo_consistency" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 		<p><br></p>
