publication update: RAS

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
 					<li class="list-group-item">
-						2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
+						2018.01. A multi-task network for joint head detection and pose estimation is accepted to RAS.
+					</li>
+					<li class="list-group-item">
+						2017.12. A learning-based method for depth from light field is accepted to PAMI.
 					</li>
 					<li class="list-group-item">
 						2017.08. Launching new homepage for better visualization on workstation and mobile.
