--- a/publications.html
+++ b/publications.html
@@ -103,6 +103,19 @@
 
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/18_ras.jpg" style="max-height:170px" class="img-responsive center-block">
+	</div>
+	<div class="col-lg-7">
+		<h3>Real-time Head Pose Estimation using Multi-task Deep Neural Network</h3>
+		<p>Byungtae Ahn, Dong-Geol Choi, Jaesik Park, and In So Kweon<br>
+		Robotics and Autonomous Systems (<b>RAS</b>), accepted<br>
+		</p>
+		<p><br></p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/18_pami.png" style="max-height:170px" class="img-responsive center-block">
 	</div>
 	<div class="col-lg-7">
