--- a/academic_activities.html
+++ b/academic_activities.html
@@ -105,6 +105,7 @@
 					<h3>International Journal</h3>
 					Transactions on Pattern Analysis and Machine Intelligence (TPAMI), IEEE<br>
 					Transactions on Image Processing (TIP), IEEE<br>
+					Transactions on Robotics (TRO), IEEE<br>
 					Transactions on Visualization and Computer Graphics (TVCG), IEEE<br>
 					Signal Processing Letters, IEEE<br>
 					International Journal of Computer Vision (IJCV), Springer<br>
