adding open3d to publication + add button for tutorial

--- a/source/content_publications_middle.html
+++ b/source/content_publications_middle.html
@@ -8,6 +8,28 @@
 
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/18_arxiv.jpg" style="max-height:170px" class="img-responsive center-block">
+	</div>
+	<div class="col-lg-7">
+		<h3>Open3D: A Modern Library For 3D Data Processing</h3>
+		<p>Qian-Yi Zhou, Jaesik Park, and Vladlen Koltun<br>
+		arXiv:1801.09847<br>
+		</p>
+		<a href="http://www.open3d.org" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="https://github.com/IntelVCL/Open3D" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
+		<a href="http://open3d.org/docs" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-book"></span> Tutorial
+		</a>
+		<p><br></p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/18_ras.jpg" style="max-height:170px" class="img-responsive center-block">
 	</div>
 	<div class="col-lg-7">
