--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
 					<li class="list-group-item">
+						2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="www.open3d.org" target="_blank">www.open3d.org</a>.
+					</li>
+					<li class="list-group-item">
 						2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
 					</li>
 					<li class="list-group-item">
@@ -93,9 +96,6 @@
 					</li>
 					<li class="list-group-item">
 						2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
-					</li>
-					<li class="list-group-item">
-						2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
 					</li>
 					</ul>
 			</div>
