adding open3d pdf link

--- a/publications.html
+++ b/publications.html
@@ -113,6 +113,9 @@
 		<a href="http://www.open3d.org" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
+		<a href="http://www.open3d.org/paper.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 		<a href="https://github.com/IntelVCL/Open3D" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
