fix weblinks in index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
 					<li class="list-group-item">
-						2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="www.open3d.org" target="_blank">http://www.open3d.org</a>.
+						2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
 					</li>
 					<li class="list-group-item">
 						2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
@@ -92,7 +92,7 @@
 						2017.08. Launching new homepage for better visualization on workstation and mobile.
 					</li>
 					<li class="list-group-item">
-						2017.05. We are releasing <a href="www.tanksandtemples.org" target="_blank">http://www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
+						2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
 					</li>
 					<li class="list-group-item">
 						2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
